deployment1.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: deploy-1
   labels:
      app: test1
spec:
  selector:
    matchLabels:
      app: test1
  replicas: 1
  template:
    metadata:
      labels:
        app: test1
    spec:
       containers:
       - name: test-nginx-1
         image: nginx
         ports:
         - containerPort: 80
