deployment2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
   name: deploy-2
   labels:
      app: test2
spec:
  selector:
    matchLabels:
      app: test2
  replicas: 1
  template:
    metadata:
      labels:
        app: test2
    spec:
       containers:
       - name: test-nginx-2
         image: nginx
         ports:
         - containerPort: 80
