frontend-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deploy
  labels:
    app: test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test
  template:
    metadata:
      labels:
        app: test
    spec:
      containers:
      - name: ubuntu-alpine
        image: alpine
        command:
         - /bin/sh
         - "-c"
         - "sleep 36000"
        imagePullPolicy: IfNotPresent
