svc1.yml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: test1
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
