svc2.yml
apiVersion: v1
kind: Service
metadata:
  name: service-2
spec:
  selector:
    app: test2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
