tls-ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-example
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
  - hosts:
        - website1.aab12.xyz
    secretName: my-tls-secret
  rules:
  - host: website1.aab12.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service-1
            port:
              number: 80
  - host: website2.aab12.xyz
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service-2
            port:
              number: 80
